--- a/mall-admin/pom.xml
+++ b/mall-admin/pom.xml
@@ -11,5 +11,19 @@
 
     <artifactId>mall-admin</artifactId>
 
+    <name>mall-admin</name>
+    <description>mall-admin project for mall</description>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.ywxiang.mall</groupId>
+            <artifactId>mall-security</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ywxiang.mall</groupId>
+            <artifactId>mall-mbg</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
