--- a/mall-admin/src/main/resources/application.yml
+++ b/mall-admin/src/main/resources/application.yml
@@ -50,3 +50,8 @@ secure:
       - /admin/info
       - /admin/logout
       - /minio/upload
+
+logging:
+  level:
+    root: info #日志配置DEBUG,INFO,WARN,ERROR
+    com.ywxiang.mall: debug
