--- a/mall-admin/src/main/resources/application.yml
+++ b/mall-admin/src/main/resources/application.yml
@@ -50,6 +50,8 @@ secure:
       - /admin/info
       - /admin/logout
       - /minio/upload
+      - /doc.html
+      - /**/v2/api-docs-ext
 
 logging:
   level:
