--- a/mall-admin/src/main/resources/application.yml
+++ b/mall-admin/src/main/resources/application.yml
@@ -5,6 +5,12 @@ mybatis:
     - classpath*:mapper/*.xml
 
 spring:
+  profiles:
+    active: dev #默认为开发环境
+    servlet:
+      multipart:
+        enabled: true #开启文件上传
+        max-file-size: 10MB #限制文件上传大小为10M
   datasource:
     url: jdbc:mysql://localhost:3306/mall?useUnicode=true&characterEncoding=utf-8&serverTimezone=Asia/Shanghai
     username: root
@@ -18,6 +24,7 @@ spring:
       stat-view-servlet: #访问监控网页的登录用户名和密码
         login-username: druid
         login-password: druid
+
   redis:
     host: localhost # Redis服务器地址
     database: 0 # Redis数据库索引（默认为0）
