--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,8 @@
 # BlueJ files
 *.ctxt
 
+application-dev.yml
+
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 .idea/
@@ -23,3 +25,4 @@ target/
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
